manifest/production/namespaces/blog/blog-svc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-svc
spec:
  selector:
    matchLabels:
      app: blog-svc
  template:
    metadata:
      labels:
        app: blog-svc
    spec:
      containers:
        - name: blog-svc
          image: geniwhitelabel/edimu-pkl:main
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
