manifest/production/namespaces/blog/blog-svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-app
spec:
  selector:
    app: blog-svc
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
